Mon Oct 16 17:27:43 1995  Sam Hartman  <hartmans@tertius.mit.edu>

	* login.c (main): Don't print warning about no tickets obtained if we didn't ask for a password.  Also, define LOGNAME for so sysvish systems are happy.  Patch from ramus@nersc.gov.

Wed Sep 06 14:20:57 1995   Chris Provenzano (proven@mit.edu)

        * krcp.c, krlogin.c, krlogind.c, krsh.c, krshd.c : 
		s/keytype/enctype/g, s/KEYTYPE/ENCTYPE/g

Sun Aug 27 15:35:04 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* rlogin.M: Document -f and -F options.

Mon Aug  7 17:32:29 1995  Sam Hartman  <hartmans@tertius.mit.edu>

	* krlogind.c: Close the write side of the syncpipe in the parent
        so we get SIGPIPE if child dies. 

	* login.c (main): Use new interface to pty_update_utmp

	* configure.in (LOGINLIBS): Check for utmp.h and utmpx.h.

	* krlogind.c (doit): Use new format for pty_update_utmp
	* Include utmp.h because libpty.h no longer does.

Fri Aug  4 00:50:41 1995  Tom Yu  <tlyu@dragons-lair.MIT.EDU>

	* krlogind.c: don't include utmp.h, since libty.h grabs it.

Wed Aug  2 13:06:02 1995  Sam Hartman  <hartmans@tertius.mit.edu>

	* krlogind.c (main): call pty_init()call pty_init()

Tue Aug  1 08:43:22 1995  Sam Hartman  <hartmans@tertius.mit.edu>

	* Makefile.in :  Remove references to logutil.c and logutil.o


	* krshd.c (doit): Replace logwtmp with pty_logwtmp

	* login.c (main): use pty_update_utmp not update_utmp

	* logutil.c: Removed because all its functionality is incorperated
        into libpty.

	* krlogind.c (doit): Pass length of line to pty_getpty

Mon Jul 31 17:07:59 1995  Sam Hartman  <hartmans@tertius.mit.edu>

	* login.c (main): Don't call TIOCSETD under Posix.
	 * Include iexten in terminal flags.


	* krlogin.c:  Don't include termio.h here either.

	* login.c: Remove special casing of AIX to include termio.h; it
        breaks almost all terminal handling, because it's the
        compatibility file for applications written for the RT.  Instead,