@@ -1,3 +1,8 @@
+Thu Nov  2 16:16:47 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>
+
+	* krlogin.c, krcp.c, krsh.c (main): If invoked with -D port, do
+		not die if entry is missing from /etc/services.
+
 Mon Oct 16 17:27:43 1995  Sam Hartman  <hartmans@tertius.mit.edu>
 
 	* login.c (main): Don't print warning about no tickets obtained if we didn't ask for a password.  Also, define LOGNAME for so sysvish systems are happy.  Patch from ramus@nersc.gov.
